Fix logo stretching in Edge browser

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
 
 .App__header {
     display: flex;
+    align-items: flex-start;
     height: 164px;
 }
 
